# decksmith

./: .gitignore  LICENSE  README.md  ROADMAP.md  config.example.yaml  pyproject.toml
src/decksmith/: __init__.py  cli.py  config.py  dashboard.py  db.py  models.py  pipeline.py  settings.py  setup_wizard.py
src/decksmith/analyze/: __init__.py  bitrate.py  bpm.py  energy.py  key.py  report.py  spectral.py
src/decksmith/discover/: __init__.py  gaps.py  listenbrainz.py  scraper.py  spotify_meta.py
src/decksmith/metadata/: __init__.py  artwork.py  cleaner.py  compilation_detect.py  enricher.py  filename_parser.py  fingerprint.py  rules.py
src/decksmith/rekordbox/: __init__.py  cuepoints.py  db_writer.py  folders.py  grids.py  xml_export.py
src/decksmith/setbuilder/: __init__.py  builder.py  flow.py  llm.py
src/decksmith/utils/: __init__.py  api_clients.py  audio.py  fs.py  tag_io.py  ui.py
